--- a/Migración a WPF/app.config
+++ b/Migración a WPF/app.config
@@ -2,13 +2,13 @@
 <configuration>
 
 	<appSettings>
-	<add key="CohereApiKey" value="FGebTzDVGQY5cg0xA8wvYrEHNGykrX7M4dRufVTF"/>
+	<add key="CohereApiKey" value=""/>
 		<add key="ApiUrl" value="https://api.cohere.ai/v1/chat"/>
 	</appSettings>
 	
 	<connectionStrings>
 		<add name="LoginConnection"
-			 connectionString="Server=localhost;Database=sistema_login;User ID=root;Password=dennis;"
+			 connectionString="Server=localhost;Database=sistema_login;User ID=root;Password=;"
 			 providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 		
